--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,7 @@
         "https://github.com/*"
       ],
       "js": [
+        "js/jquery/jquery.min.js",
         "src/inject/inject.js"
       ]
     }
