--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,12 @@
   "background": {
     "service_worker": "src/bg/background.js"
   },
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon48.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "action": {
     "default_title": "browser action demo",
     "default_popup": "src/browser_action/browser_action.html",
